2005-01-05  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gas/elf/elf.exp (section5): Use 0-9 instead of [:digit:].

2004-12-31  Alan Modra  <amodra@bigpond.net.au>

	* gas/elf/elf.exp: Don't list reloc sections.
	* gas/elf/section5.e: Remove reloc sections.

2004-12-21  Tomer Levi  <Tomer.Levi@nsc.com>

	* gas/crx/beq_insn.d: Update reference file according to 
	disassembler printing method.
	* gas/crx/bit_insn.d: Likewise. 
	* gas/crx/br_insn.d: Likewise. 
	* gas/crx/cmpbr_insn.d: Likewise. 
	* gas/crx/cop_insn.d: Likewise. 
	* gas/crx/load_stor_insn.d: Likewise.

2004-12-21  Hans-Peter Nilsson  <hp@axis.com>

	* gas/elf/section5.e, gas/elf/section5.l: Replace [:digit:],
	[:xdigit:] and {N} in regexps with [0-9], [0-9a-fA-F] and N
	copies, to cater to tcl versions before Tcl 8.2.3.

2004-12-20  Nick Clifton  <nickc@redhat.com>

	* gas/elf/section5.[ls]: Use % instead of @ in .section
	directives.

2004-12-16  Richard Sandiford  <rsandifo@redhat.com>

	* gas/v850/split-lo16.{s,d}: New test.
	* gas/v850/v850.exp: Run it.

2004-12-15 Jan Beulich  <jbeulich@novell.com>

	* gas/elf/section5.[els]: New.

2004-12-13  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/elf-rel25.d, gas/mips/elf-rel25a.d: Cope with different
	.text alignments.

2004-12-11  Alan Modra  <amodra@bigpond.net.au>

	* gas/alpha/elf-usepv-1.d: Update for changed section syms.
	* gas/arm/mapping.d: Likewise.
	* gas/mips/tmips16-e.d: Likewise.
	* gas/mips/tmips16-f.d: Likewise.
	* gas/mmix/align-1.d: Likewise.
	* gas/mmix/basep-10.d: Likewise.
	* gas/mmix/basep-11.d: Likewise.
	* gas/mmix/basep-7.d: Likewise.
	* gas/mmix/basep-8.d: Likewise.
	* gas/mmix/basep-9.d: Likewise.
	* gas/mmix/builtin1.d: Likewise.
	* gas/mmix/builtin2.d: Likewise.
	* gas/mmix/builtin3.d: Likewise.
	* gas/mmix/bz-c.d: Likewise.
	* gas/mmix/comment-2.d: Likewise.
	* gas/mmix/comment-3.d: Likewise.
	* gas/mmix/cons-2.d: Likewise.
	* gas/mmix/fb-1.d: Likewise.
	* gas/mmix/fb-2.d: Likewise.
	* gas/mmix/geta-c.d: Likewise.